Tue Jan 15 16:30:08 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Whenever a table is returned that has the hostname and the
          host_id is NULL then its value is set the 'Unknown'.

Mon Jan 14 17:14:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/BMW_installers.mpc:
        * install/BMW_installers.mwc:
        * install/installers.mwc:

          Updated the BMW installer so that it will build the
          CUTS.Data assembly/project before building the BMW
          website.

Fri Jan 11 19:13:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/baseline.aspx:
        * utils/BMW/website/controls/ComponentPerformanceCategory.ascx:
        * utils/BMW/website/controls/ComponentPerformanceCategory.ascx.cs:
        * utils/BMW/website/controls/SystemPerformance.ascx.cs:
        * utils/BMW/website/performance.aspx:

          Updated system metrics display to show an appropriate category
          header for the category title.

Thu Jan 10 15:04:44 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Component_Registry.cpp:

          Bug fix where the component registration was being deleted
          during the unregistration process.

Thu Jan 10 14:49:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/Testing_Service_exec_i.cpp:

          Re-enabled the unregistration of components.

        * cuts/Component_Registry.cpp:

          Unregistering a component does not delete its registration
          inforamation, it just updates its state. This allows use to
          re-register components when they come online.

Thu Jan 10 06:00:33 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/Testing_Service_exec_i.cpp:

          Temporarily disabled unregistering a component in the registry.

        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.h: