@@ -1,3 +1,9 @@
+Tue Jan 15 19:00:05 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * etc/SQL/CUTS-baseline.sql:
+
+          An empty string is displayed for the default hostname.
+
 Tue Jan 15 16:30:08 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/SQL/CUTS-baseline.sql:
